force-app/main/default/objects/SFDCEmailMessage__c/SFDCEmailMessage__c.object-meta.xml
<CustomObject>
    <label>SFDCEmailMessage</label>
    <nameField>
        <label>SFDCEmailMessage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDCEmailMessages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>