force-app/main/default/objects/SFDCEmailMessage__c/fields/IndicoAPIOutput__c.field-meta.xml
<CustomField>
    <fullName>IndicoAPIOutput__c</fullName>
    <label>IndicoAPIOutput</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>