force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageCcAddress__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageCcAddress__c</fullName>
    <label>SFDCEmailMessageCcAddress</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>