force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageFromAddress__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageFromAddress__c</fullName>
    <label>SFDCEmailMessageFromAddress</label>
    <type>Email</type>
</CustomField>