force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageParentCaseNumber__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageParentCaseNumber__c</fullName>
    <label>SFDCEmailMessageParentCaseNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>