force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageParentId__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageParentId__c</fullName>
    <label>SFDCEmailMessageParentId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>