force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageParentReferenceNumber__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageParentReferenceNumber__c</fullName>
    <label>SFDCEmailMessageParentReferenceNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>