force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageSubject__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageSubject__c</fullName>
    <label>SFDCEmailMessageSubject</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>