force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageTextBody__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageTextBody__c</fullName>
    <label>SFDCEmailMessageTextBody</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>