force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageToAddress__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageToAddress__c</fullName>
    <label>SFDCEmailMessageToAddress</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>