force-app/main/default/objects/SFDCEmailMessage__c/fields/SFDCEmailMessageType__c.field-meta.xml
<CustomField>
    <fullName>SFDCEmailMessageType__c</fullName>
    <label>SFDCEmailMessageType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>